코드 에러 수정 v2