@@ -18,6 +18,7 @@ import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.time.format.DateTimeParseException;
@@ -37,7 +38,7 @@ public class ChungcheongAirQualityService {
     private String serviceKey;
 
 
-    @Scheduled(cron = "0 0,30 * * * *")
+    @Scheduled(cron = "0 10 * * * *")
     public void updateAirQualityDataAutomatically() {
         // 스케줄링된 작업: 일정 간격으로 대기 질 데이터를 업데이트하는 메소드
         List<String> sidoList = Arrays.asList("충남", "충북", "세종", "대전");
@@ -47,29 +48,27 @@ public class ChungcheongAirQualityService {
 
     // 충북, 충남, 대전, 세종 지역의 대기 질 정보를 가져와 저장하는 메서드
     @Transactional("chungcheongTransactionManager")
-    public String fetchAndSaveChungcheongAirQualityData(String sidoName) {
+    public void fetchAndSaveChungcheongAirQualityData(String sidoName) {
         try {
             // API 요청을 위한 URL 구성
-            StringBuilder requestUrlBuilder = new StringBuilder("https://apis.data.go.kr/B552584/ArpltnInforInqireSvc/getCtprvnRltmMesureDnsty?");
-            requestUrlBuilder.append("sidoName=").append(URLEncoder.encode(sidoName, "UTF-8"));
-            requestUrlBuilder.append("&pageNo=").append(URLEncoder.encode("1", "UTF-8"));
-            requestUrlBuilder.append("&numOfRows=").append(URLEncoder.encode("100", "UTF-8"));
-            requestUrlBuilder.append("&returnType=").append(URLEncoder.encode("json", "UTF-8"));
-            requestUrlBuilder.append("&serviceKey=").append(serviceKey); // 서비스 키 추가
-            requestUrlBuilder.append("&ver=").append(URLEncoder.encode("1.0", "UTF-8"));
+            String requestUrlBuilder = "https://apis.data.go.kr/B552584/ArpltnInforInqireSvc/getCtprvnRltmMesureDnsty?" + "sidoName=" + URLEncoder.encode(sidoName, StandardCharsets.UTF_8) +
+                    "&pageNo=" + URLEncoder.encode("1", StandardCharsets.UTF_8) +
+                    "&numOfRows=" + URLEncoder.encode("100", StandardCharsets.UTF_8) +
+                    "&returnType=" + URLEncoder.encode("json", StandardCharsets.UTF_8) +
+                    "&serviceKey=" + serviceKey + // 서비스 키 추가
+                    "&ver=" + URLEncoder.encode("1.0", StandardCharsets.UTF_8);
 
-            URL url = new URL(requestUrlBuilder.toString());
-            HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-            conn.setRequestMethod("GET");
-            conn.setRequestProperty("Content-type", "application/json");
+            URL url = new URL(requestUrlBuilder); // URL 객체 생성
+            HttpURLConnection conn = (HttpURLConnection) url.openConnection(); // 연결 열기
+            conn.setRequestMethod("GET"); // 요청 메서드 설정
+            conn.setRequestProperty("Content-type", "application/json"); // 컨텐츠 타입 설정
 
             // HTTP 응답 코드 확인
             if (conn.getResponseCode() != HttpURLConnection.HTTP_OK) {
                 log.error("HTTP 오류 코드 : " + conn.getResponseCode());
-                return "HTTP 오류로 실패";
             }
 
-            BufferedReader rd = new BufferedReader(new InputStreamReader(conn.getInputStream()));
+            BufferedReader rd = new BufferedReader(new InputStreamReader(conn.getInputStream())); // 응답 읽기
             StringBuilder responseBuilder = new StringBuilder();
             String line;
             while ((line = rd.readLine()) != null) {
@@ -78,12 +77,11 @@ public class ChungcheongAirQualityService {
             rd.close();
             conn.disconnect();
 
-            String response = responseBuilder.toString();
+            String response = responseBuilder.toString(); // 응답을 문자열로 변환
 
             // 응답 형식 검증
             if (!response.trim().startsWith("{")) {
                 log.error("예상하지 않은 JSON 형식의 응답입니다. 응답: " + response);
-                return "예상치 않은 응답 형식으로 실패";
             }
 
             JsonNode rootNode = objectMapper.readTree(response);
@@ -95,10 +93,8 @@ public class ChungcheongAirQualityService {
                 chungcheongAirQualityRepository.save(chungcheongAirQuality);
             });
 
-            return "성공";
         } catch (IOException e) {
             log.error("대기 질 데이터를 가져오고 저장하는 데 실패했습니다", e);
-            return "실패";
         }
     }
     //--------------------------------------------------------------------------------------------------------------------------------------
