@@ -7,7 +7,6 @@ import inhatc.k8sProject.fineDust.domain.chungcheong.ChungcheongStationInfo;
 import inhatc.k8sProject.fineDust.dto.StationAirQualityInfoDTO;
 import inhatc.k8sProject.fineDust.repository.chungcheong.ChungcheongAirQualityRepository;
 import inhatc.k8sProject.fineDust.repository.chungcheong.ChungcheongStationInfoRepository;
-import inhatc.k8sProject.fineDust.repository.gyeongsang.GyeongsangStationInfoRepository;
 import lombok.RequiredArgsConstructor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -22,6 +21,7 @@ import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
 import java.util.Arrays;
 import java.util.List;
@@ -36,13 +36,13 @@ public class ChungcheongStationInfoService {
     private final ChungcheongStationInfoRepository chungcheongStationInfoRepository;
     private final ChungcheongAirQualityRepository chungcheongAirQualityRepository;
     private final ObjectMapper objectMapper = new ObjectMapper(); // JSON 파싱을 위한 ObjectMapper
-    private static final Logger log = LoggerFactory.getLogger(GyeongsangStationInfoRepository.class);
+    private static final Logger log = LoggerFactory.getLogger(ChungcheongStationInfoRepository.class);
 
     @Value("${service.key}")
     private String serviceKey;
 
 
-    @Scheduled(cron = "0 0,30 * * * *")
+    @Scheduled(cron = "0 10 * * * *")
     public void updateAirQualityDataAutomatically() {
         // 스케줄링된 작업: 일정 간격으로 대기 질 데이터를 업데이트하는 메소드
         List<String> sidoList = Arrays.asList("충남", "충북", "세종", "대전");
@@ -52,16 +52,15 @@ public class ChungcheongStationInfoService {
 
     // 충북, 충남, 대전, 세종 지역의 측정소 정보를 가져와 저장하는 메서드
     @Transactional("chungcheongTransactionManager")
-    public String fetchAndSaveChungcheongStationInfo(String sidoName) {
+    public void fetchAndSaveChungcheongStationInfo(String sidoName) {
         try {
-            StringBuilder requestUrlBuilder = new StringBuilder("https://apis.data.go.kr/B552584/MsrstnInfoInqireSvc/getMsrstnList?");
-            requestUrlBuilder.append("&addr=").append(URLEncoder.encode(sidoName, "UTF-8"));
-            requestUrlBuilder.append("&pageNo=").append(URLEncoder.encode("1", "UTF-8"));
-            requestUrlBuilder.append("&numOfRows=").append(URLEncoder.encode("100", "UTF-8"));
-            requestUrlBuilder.append("&serviceKey=").append(serviceKey);
-            requestUrlBuilder.append("&returnType=").append(URLEncoder.encode("json", "UTF-8"));
+            String requestUrlBuilder = "https://apis.data.go.kr/B552584/MsrstnInfoInqireSvc/getMsrstnList?" + "&addr=" + URLEncoder.encode(sidoName, StandardCharsets.UTF_8) +
+                    "&pageNo=" + URLEncoder.encode("1", StandardCharsets.UTF_8) +
+                    "&numOfRows=" + URLEncoder.encode("100", StandardCharsets.UTF_8) +
+                    "&serviceKey=" + serviceKey +
+                    "&returnType=" + URLEncoder.encode("json", StandardCharsets.UTF_8);
 
-            URL url = new URL(requestUrlBuilder.toString());
+            URL url = new URL(requestUrlBuilder);
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.setRequestMethod("GET");
             conn.setRequestProperty("Content-type", "application/json");
@@ -69,7 +68,6 @@ public class ChungcheongStationInfoService {
             // HTTP 응답 코드 확인
             if (conn.getResponseCode() != HttpURLConnection.HTTP_OK) {
                 log.error("HTTP 오류 코드 : " + conn.getResponseCode());
-                return "HTTP 오류로 실패";
             }
 
             BufferedReader rd = new BufferedReader(new InputStreamReader(conn.getInputStream()));
@@ -85,7 +83,6 @@ public class ChungcheongStationInfoService {
             // 응답 형식 검증
             if (response.trim().startsWith("<")) {
                 log.error("예상하지 않은 JSON 형식의 응답입니다. 응답: " + response);
-                return "예상치 않은 응답 형식으로 실패";
             }
 
             JsonNode rootNode = objectMapper.readTree(response);
@@ -98,10 +95,8 @@ public class ChungcheongStationInfoService {
                 chungcheongStationInfoRepository.save(chungcheongStationInfo);
             }
 
-            return "성공";
         } catch (IOException e) {
             log.error("측정소 정보를 가져오고 저장하는 데 실패했습니다", e);
-            return "실패";
         }
     }
     //--------------------------------------------------------------------------------------------------------------------------------------
