@@ -21,6 +21,7 @@ import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Objects;
@@ -41,26 +42,25 @@ public class GangwonStationInfoService {
     private String serviceKey;
 
 
-    @Scheduled(cron = "0 0,30 * * * *")
+    @Scheduled(cron = "0 10 * * * *")
     public void updateStationInfoDataAutomatically() {
         String sidoName = "강원"; // 대상 지역 이름
-        fetchAndSaveStationInfo(sidoName); // 해당 지역의 측정소 정보 가져와 저장
+        fetchAndSaveGangwonStationInfo(sidoName); // 해당 지역의 측정소 정보 가져와 저장
     }
     //------------------------------------------------------------------------------------------------------------------------
 
     // 강원도 측정소 정보를 가져와 저장하는 메서드
     @Transactional("gangwonTransactionManager")
-    public String fetchAndSaveStationInfo(String sidoName) {
+    public void fetchAndSaveGangwonStationInfo(String sidoName) {
         try {
             // API 요청을 위한 URL 구성
-            StringBuilder requestUrlBuilder = new StringBuilder("https://apis.data.go.kr/B552584/MsrstnInfoInqireSvc/getMsrstnList?");
-            requestUrlBuilder.append("&addr=").append(URLEncoder.encode(sidoName, "UTF-8"));
-            requestUrlBuilder.append("&pageNo=").append(URLEncoder.encode("1", "UTF-8"));
-            requestUrlBuilder.append("&numOfRows=").append(URLEncoder.encode("100", "UTF-8"));
-            requestUrlBuilder.append("&serviceKey=").append(serviceKey); // 서비스 키 추가
-            requestUrlBuilder.append("&returnType=").append(URLEncoder.encode("json", "UTF-8"));
+            String requestUrlBuilder = "https://apis.data.go.kr/B552584/MsrstnInfoInqireSvc/getMsrstnList?" + "&addr=" + URLEncoder.encode(sidoName, StandardCharsets.UTF_8) +
+                    "&pageNo=" + URLEncoder.encode("1", StandardCharsets.UTF_8) +
+                    "&numOfRows=" + URLEncoder.encode("100", StandardCharsets.UTF_8) +
+                    "&serviceKey=" + serviceKey + // 서비스 키 추가
+                    "&returnType=" + URLEncoder.encode("json", StandardCharsets.UTF_8);
 
-            URL url = new URL(requestUrlBuilder.toString());
+            URL url = new URL(requestUrlBuilder);
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.setRequestMethod("GET");
             conn.setRequestProperty("Content-type", "application/json");
@@ -68,7 +68,6 @@ public class GangwonStationInfoService {
             // HTTP 응답 코드 확인
             if (conn.getResponseCode() != HttpURLConnection.HTTP_OK) {
                 log.error("HTTP 오류 코드 : " + conn.getResponseCode());
-                return "HTTP 오류로 실패";
             }
 
             BufferedReader rd = new BufferedReader(new InputStreamReader(conn.getInputStream()));
@@ -85,7 +84,6 @@ public class GangwonStationInfoService {
             // 응답 형식 검증
             if (response.trim().startsWith("<")) {
                 log.error("예상하지 않은 JSON 형식의 응답입니다. 응답: " + response);
-                return "예상치 않은 응답 형식으로 실패";
             }
 
             JsonNode rootNode = objectMapper.readTree(response);
@@ -100,10 +98,8 @@ public class GangwonStationInfoService {
                 gangwonStationInfoRepository.save(stationInfo);
             }
 
-            return "성공";
         } catch (IOException e) {
             log.error("측정소 정보를 가져오고 저장하는 데 실패했습니다", e);
-            return "실패";
         }
     }
     //------------------------------------------------------------------------------------------------------------------------
