@@ -18,6 +18,7 @@ import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.time.format.DateTimeParseException;
@@ -36,8 +37,7 @@ public class GyeonggiAirQualityService {
     @Value("${service.key}")
     private String serviceKey;
 
-    // 매 시간의 15분에 실행
-    @Scheduled(cron = "0 0,30 * * * *")
+    @Scheduled(cron = "0 10 * * * *")
     public void updateAirQualityDataAutomatically() {
         List<String> sidoList = Arrays.asList("서울", "경기", "인천");
         sidoList.forEach(this::fetchAndSaveGyeonggiAirQualityData);
@@ -46,18 +46,17 @@ public class GyeonggiAirQualityService {
 
     // 경기, 서울, 인천 지역의 대기 질 데이터를 가져와 저장하는 메서드
     @Transactional("gyeonggiTransactionManager")
-    public String fetchAndSaveGyeonggiAirQualityData(String sidoName) {
+    public void fetchAndSaveGyeonggiAirQualityData(String sidoName) {
         try {
             // 대기 질 데이터를 가져오기 위한 API 요청을 위한 URL 구성
-            StringBuilder requestUrlBuilder = new StringBuilder("https://apis.data.go.kr/B552584/ArpltnInforInqireSvc/getCtprvnRltmMesureDnsty?");
-            requestUrlBuilder.append("sidoName=").append(URLEncoder.encode(sidoName, "UTF-8"));
-            requestUrlBuilder.append("&pageNo=").append(URLEncoder.encode("1", "UTF-8"));
-            requestUrlBuilder.append("&numOfRows=").append(URLEncoder.encode("100", "UTF-8"));
-            requestUrlBuilder.append("&returnType=").append(URLEncoder.encode("json", "UTF-8"));
-            requestUrlBuilder.append("&serviceKey=").append(serviceKey); // 서비스 키 추가
-            requestUrlBuilder.append("&ver=").append(URLEncoder.encode("1.0", "UTF-8"));
+            String requestUrlBuilder = "https://apis.data.go.kr/B552584/ArpltnInforInqireSvc/getCtprvnRltmMesureDnsty?" + "sidoName=" + URLEncoder.encode(sidoName, StandardCharsets.UTF_8) +
+                    "&pageNo=" + URLEncoder.encode("1", StandardCharsets.UTF_8) +
+                    "&numOfRows=" + URLEncoder.encode("100", StandardCharsets.UTF_8) +
+                    "&returnType=" + URLEncoder.encode("json", StandardCharsets.UTF_8) +
+                    "&serviceKey=" + serviceKey + // 서비스 키 추가
+                    "&ver=" + URLEncoder.encode("1.0", StandardCharsets.UTF_8);
 
-            URL url = new URL(requestUrlBuilder.toString()); // URL 객체 생성
+            URL url = new URL(requestUrlBuilder); // URL 객체 생성
             HttpURLConnection conn = (HttpURLConnection) url.openConnection(); // 연결 열기
             conn.setRequestMethod("GET"); // 요청 메서드 설정
             conn.setRequestProperty("Content-type", "application/json"); // 컨텐츠 타입 설정
@@ -65,7 +64,6 @@ public class GyeonggiAirQualityService {
             // HTTP 응답 코드 확인
             if (conn.getResponseCode() != HttpURLConnection.HTTP_OK) {
                 log.error("HTTP 오류 코드 : " + conn.getResponseCode());
-                return "HTTP 오류로 실패";
             }
 
             BufferedReader rd = new BufferedReader(new InputStreamReader(conn.getInputStream())); // 응답 읽기
@@ -82,21 +80,19 @@ public class GyeonggiAirQualityService {
             // 응답 형식 검증
             if (!response.trim().startsWith("{")) {
                 log.error("예상하지 않은 JSON 형식의 응답입니다. 응답: " + response);
-                return "예상치 않은 응답 형식으로 실패";
             }
 
             JsonNode rootNode = objectMapper.readTree(response); // JSON 응답 파싱
             JsonNode items = rootNode.path("response").path("body").path("items"); // 관련 데이터 추출
 
+            // JSON 데이터 파싱 및 저장
             items.forEach(item -> {
                 GyeonggiAirQuality gyeonggiAirQuality = parseAirQualityData(item); // 대기 질 데이터 파싱
                 gyeonggiAirQualityRepository.save(gyeonggiAirQuality); // 파싱된 데이터 저장
             });
 
-            return "성공"; // 성공 메시지 반환
         } catch (IOException e) {
             log.error("대기 질 데이터를 가져오고 저장하는 데 실패했습니다", e);
-            return "실패"; // 실패 메시지 반환
         }
     }
     //--------------------------------------------------------------------------------------------------------------------------------------
