@@ -18,6 +18,7 @@ import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.time.format.DateTimeParseException;
@@ -37,7 +38,7 @@ public class GyeongsangAirQualityService {
     private String serviceKey;
 
 
-    @Scheduled(cron = "0 0,30 * * * *")
+    @Scheduled(cron = "0 10 * * * *")
     public void updateAirQualityDataAutomatically() {
         // 스케줄링된 작업: 일정 간격으로 대기 질 데이터를 업데이트하는 메소드
         List<String> sidoList = Arrays.asList("경북", "경남", "대구", "울산", "부산");
@@ -47,18 +48,17 @@ public class GyeongsangAirQualityService {
 
     // 경북, 경남, 대구, 울산, 부산 지역의 대기 질 데이터를 가져와 저장하는 메서드
     @Transactional("gyeongsangTransactionManager")
-    public String fetchAndSaveGyeongsangAirQualityData(String sidoName) {
+    public void fetchAndSaveGyeongsangAirQualityData(String sidoName) {
         try {
             // API 요청을 위한 URL 구성
-            StringBuilder requestUrlBuilder = new StringBuilder("https://apis.data.go.kr/B552584/ArpltnInforInqireSvc/getCtprvnRltmMesureDnsty?");
-            requestUrlBuilder.append("sidoName=").append(URLEncoder.encode(sidoName, "UTF-8"));
-            requestUrlBuilder.append("&pageNo=").append(URLEncoder.encode("1", "UTF-8"));
-            requestUrlBuilder.append("&numOfRows=").append(URLEncoder.encode("100", "UTF-8"));
-            requestUrlBuilder.append("&returnType=").append(URLEncoder.encode("json", "UTF-8"));
-            requestUrlBuilder.append("&serviceKey=").append(serviceKey); // 서비스 키 추가
-            requestUrlBuilder.append("&ver=").append(URLEncoder.encode("1.0", "UTF-8"));
+            String requestUrlBuilder = "https://apis.data.go.kr/B552584/ArpltnInforInqireSvc/getCtprvnRltmMesureDnsty?" + "sidoName=" + URLEncoder.encode(sidoName, StandardCharsets.UTF_8) +
+                    "&pageNo=" + URLEncoder.encode("1", StandardCharsets.UTF_8) +
+                    "&numOfRows=" + URLEncoder.encode("100", StandardCharsets.UTF_8) +
+                    "&returnType=" + URLEncoder.encode("json", StandardCharsets.UTF_8) +
+                    "&serviceKey=" + serviceKey + // 서비스 키 추가
+                    "&ver=" + URLEncoder.encode("1.0", StandardCharsets.UTF_8);
 
-            URL url = new URL(requestUrlBuilder.toString());
+            URL url = new URL(requestUrlBuilder);
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.setRequestMethod("GET");
             conn.setRequestProperty("Content-type", "application/json");
@@ -66,7 +66,6 @@ public class GyeongsangAirQualityService {
             // HTTP 응답 코드 확인
             if (conn.getResponseCode() != HttpURLConnection.HTTP_OK) {
                 log.error("HTTP 오류 코드 : " + conn.getResponseCode());
-                return "HTTP 오류로 실패";
             }
 
             BufferedReader rd = new BufferedReader(new InputStreamReader(conn.getInputStream()));
@@ -83,7 +82,6 @@ public class GyeongsangAirQualityService {
             // 응답 형식 검증
             if (!response.trim().startsWith("{")) {
                 log.error("예상하지 않은 JSON 형식의 응답입니다. 응답: " + response);
-                return "예상치 않은 응답 형식으로 실패";
             }
 
             JsonNode rootNode = objectMapper.readTree(response);
@@ -95,10 +93,8 @@ public class GyeongsangAirQualityService {
                 gyeongsangAirQualityRepository.save(gyeongsangAirQuality);
             });
 
-            return "성공";
         } catch (IOException e) {
             log.error("대기 질 데이터를 가져오고 저장하는 데 실패했습니다", e);
-            return "실패";
         }
     }
     //--------------------------------------------------------------------------------------------------------------------------------------
