@@ -22,6 +22,7 @@ import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
 import java.util.Arrays;
 import java.util.List;
@@ -43,7 +44,7 @@ public class JeollaStationInfoService {
     private String serviceKey;
 
 
-    @Scheduled(cron = "0 0,30 * * * *")
+    @Scheduled(cron = "0 10 * * * *")
     public void updateAirQualityDataAutomatically() {
         // 스케줄링된 작업: 일정 간격으로 대기 질 데이터를 업데이트하는 메소드
         List<String> sidoList = Arrays.asList("전북", "전남", "광주");
@@ -53,25 +54,23 @@ public class JeollaStationInfoService {
 
     // 전북, 전남, 광주 지역의 측정소 정보를 가져와 저장하는 메소드
     @Transactional("jeollaTransactionManager")
-    public String fetchAndSaveJeollaStationInfo(String sidoName) {
+    public void fetchAndSaveJeollaStationInfo(String sidoName) {
         try {
-            StringBuilder requestUrlBuilder = new StringBuilder("https://apis.data.go.kr/B552584/MsrstnInfoInqireSvc/getMsrstnList?");
-            requestUrlBuilder.append("&addr=").append(URLEncoder.encode(sidoName, "UTF-8"));
-            requestUrlBuilder.append("&pageNo=").append(URLEncoder.encode("1", "UTF-8"));
-            requestUrlBuilder.append("&numOfRows=").append(URLEncoder.encode("100", "UTF-8"));
-            requestUrlBuilder.append("&serviceKey=").append(serviceKey);
-            requestUrlBuilder.append("&returnType=").append(URLEncoder.encode("json", "UTF-8"));
+            String requestUrlBuilder = "https://apis.data.go.kr/B552584/MsrstnInfoInqireSvc/getMsrstnList?" + "&addr=" + URLEncoder.encode(sidoName, StandardCharsets.UTF_8) +
+                    "&pageNo=" + URLEncoder.encode("1", StandardCharsets.UTF_8) +
+                    "&numOfRows=" + URLEncoder.encode("100", StandardCharsets.UTF_8) +
+                    "&serviceKey=" + serviceKey +
+                    "&returnType=" + URLEncoder.encode("json", StandardCharsets.UTF_8);
 
 
-            URL url = new URL(requestUrlBuilder.toString());
+            URL url = new URL(requestUrlBuilder);
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.setRequestMethod("GET");
             conn.setRequestProperty("Content-type", "application/json");
 
             // 응답 코드 확인
             if (conn.getResponseCode() != HttpURLConnection.HTTP_OK) {
-                log.error("HTTP error code : " + conn.getResponseCode());
-                return "Failure due to HTTP error";
+                log.error("HTTP 오류 코드 : " + conn.getResponseCode());
             }
 
             BufferedReader rd = new BufferedReader(new InputStreamReader(conn.getInputStream()));
@@ -85,8 +84,7 @@ public class JeollaStationInfoService {
 
             String response = responseBuilder.toString();
             if (response.trim().startsWith("<")) {
-                log.error("Response is not in expected JSON format. Response: " + response);
-                return "Failure due to unexpected response format";
+                log.error("예상하지 않은 JSON 형식의 응답입니다. 응답: " + response);
             }
 
             JsonNode rootNode = objectMapper.readTree(response);
@@ -100,10 +98,8 @@ public class JeollaStationInfoService {
                 jeollaStationInfoRepository.save(jeollaStationInfo);
             }
 
-            return "Success";
         } catch (IOException e) {
-            log.error("Failed to fetch and save station info", e);
-            return "Failure";
+            log.error("측정소 정보를 가져오고 저장하는 데 실패했습니다", e);
         }
     }
     //--------------------------------------------------------------------------------------------------------------------------------------
